2.13.7:

2008-08-14  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Added the missing #m4 prefix, to fix the build.
	Sorry.

2008-08-12  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/gtk_methods.defs: Regenerated.
	* gtk/src/linkbutton.hg: Added get/set_visited() and the property.
	* gtk/src/statusicon.ccg:
	* gtk/src/statusicon.hg: Use _WRAP_METHOD() for get_gicon(), 
	adapting it to the changed GTK+ API.

2008-08-11  Armin Burgmeier  <armin@arbur.net>

	* win32_installer/: Moved from installer.

	* configure.in:
	* Makefile.am: Adapt build.

2008-08-10  Armin Burgmeier  <armin@arbur.net>

	* installer/Makefile.am: Distribute all the necessary files to build
	the installer.

2008-08-10  Armin Burgmeier  <armin@arbur.net>

	* installer/NSISLibrary/CmdParameters.nsh:
	* installer/NSISLibrary/DetectGTK.nsh:
	* installer/NSISLibrary/IsNT.nsh:
	* installer/NSISLibrary/Makefile.am:
	* installer/NSISLibrary/ParseVersion.nsh:
	* installer/NSISLibrary/PathManipulation.nsh:
	* installer/NSISLibrary/PathQuestion.ini:
	* installer/NSISLibrary/SetContext.ini:
	* installer/NSISLibrary/StringUtilities.nsh:
	* installer/NSISLibrary/VersionCheck.nsh:
	* installer/NSISLibrary/WriteEnvStr.nsh:

	* installer/translations/english.nsh:
	* installer/translations/french.nsh:
	* installer/translations/Makefile.am:

	* installer/gtk_devel_setup-2.12.ini:
	* installer/gtk_runtime_setup-2.12.ini:
	* installer/gtkmm.ico:
	* installer/gtkmm_win32.txt:
	* installer/gtkmm-2.4.vsprops:
	* installer/gtkmm-2.4d.vsprops:
	* installer/README:
	* installer/install-msvc-module:
	* installer/gtkmm-installer.nsi.in:
	* installer/build-installer:
	* installer/Makefile.am: Added files and helper scripts used to
	generate the Windows installer.

	* Makefile.am:
	* configure.in: Added installer/ subdirectory.

2008-08-09  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/: Moved from MSVC_Net2003.

	* Makefile.am:
	* configure.in: Adapted build files.
