@@ -1,7 +1,7 @@
 
 #define APSTUDIO_READONLY_SYMBOLS
 
-#include "afxres.h"
+#include <windows.h>
 
 #undef APSTUDIO_READONLY_SYMBOLS
 
