@@ -1,3 +1,11 @@
+2008-08-27  Armin Burgmeier  <armin@arbur.net>
+
+	* MSVC_Net2005/gdkmm/gdkmm.rc.in:
+	* MSVC_Net2005/atkmm/atkmm.rc.in:
+	* MSVC_Net2005/gtkmm/gtkmm.rc.in: Replaced #include "afxres.h" by
+	#include <windows.h> which does the job equally well, and allows
+	compilation with the freely available Visual Studio Express compiler.
+
 2.13.7:
 
 2008-08-14  Murray Cumming  <murrayc@murrayc.com>
